--- a/Procedimiento_Obtener_la_lista_de__.tex
+++ b/Procedimiento_Obtener_la_lista_de__.tex
@@ -5,7 +5,7 @@
 	% Determinar las agregaciones por antena
 	% Visualizar (agrego alfa, min_volume y zoom en regiones)
 
-\section{Methodology} \ref{methods}
+\section{Methodology} \label{methods}
 
 \subsection{Home detection}
 
