--- a/section_Introduction_Chagas_disease_is__.tex
+++ b/section_Introduction_Chagas_disease_is__.tex
@@ -1,8 +1,9 @@
 \section{Introduction}
 
-Chagas disease is a tropical parasitic epidemic of global reach, spread mostly across 17 Latin American countries. The World Health Organization (WHO) estimates more than six million infected people worldwide~\cite{who2016}. Most transmissions occur in the endemic regions in America via the \textit{Trypanosoma cruzi} parasite, vector-borne by the \textit{Triatomine} insect family (also called "kissing bug", and known by many local names such as "vinchuca" in Argentina, Bolivia, Chile and Paraguay, and "chinche" in Central America). In recent years and due to globalization and migrations, the disease has become a health issue in other continents, particularly in countries who receive Latin American immigrants such as Spain and the United States~\cite{schmunis2010chagas}, making it a global health problem.
+Chagas disease is a tropical parasitic epidemic of global reach, spread mostly across 17 Latin American countries. The World Health Organization (WHO) estimates more than six million infected people worldwide~\cite{who2016}. The disease is caused by the \textit{Trypanosoma cruzi} parasite. Most transmissions occur in the endemic regions in America, where \textit{T. cruzi} is spread to humans by the \textit{Triatomine} insect family (also called "kissing bug", and known by many local names such as "vinchuca" in Argentina, Bolivia, Chile and Paraguay, and "chinche" in Central America). In recent years and due to globalization and migrations, the disease has become a health issue in other continents, particularly in countries who receive Latin American immigrants such as Spain and the United States~\cite{schmunis2010chagas}, making it a global health problem.
 
-A crucial characteristic of the infection is that it may last 10 to 30 years in an individual without being detected~\cite{rassi2012american}, which greatly complicates effective detection and treatment. Long-term human mobility, particularly seasonal and permanent rural-urban migration, thus plays a key role in the spread of the epidemic~\cite{briceno2009chagas}. Relevant routes of transmission also include blood transfusion and congenital transmission, estimating 14,000 newborns infected each year in the Americas~\cite{OPS2006chagas}.
+A crucial characteristic of the infection is that it may last 10 to 30 years in an individual without being detected~\cite{rassi2012american}, which greatly complicates effective detection and treatment. In effect, about 70\% of individuals with chronic Chagas disease will never develop symptoms, whereas the remaining 30\% will develop life-threatening heart and/or digestive disorders.
+Long-term human mobility, particularly seasonal and permanent rural-urban migration, thus plays a key role in the spread of the epidemic~\cite{briceno2009chagas}. Relevant routes of transmission also include blood transfusion and congenital transmission, with an estimated 14,000 newborns infected each year in the Americas~\cite{OPS2006chagas}.
 % \begin{comment}  en el drive estan las ppt del min salud \end{comment}. 
 The spatial dissemination of a congenitally transmitted disease sidesteps the available measures to control risk groups, and shows that individuals who have not been exposed to the disease vector should also be included in detection campaigns.
 
