--- a/section_Conclusions_The_heatmaps_expose__.tex
+++ b/section_Conclusions_The_heatmaps_expose__.tex
@@ -1,4 +1,4 @@
-\section{Conclusions}
+\section{Machine Learning Algorithms}
 
 The heatmaps expose a 'temperature' descent from the core regions outwards. The heat is concentrated in the ecoregion and gradually descends as we move further away. This expected behavior could be explained by the fact that calls are in general of a local nature and limited to 3 or 4 antennas used per user. 
 
