--- a/subsection_Supervised_Algorithms_Classification_algorithms__1.tex
+++ b/subsection_Supervised_Algorithms_Classification_algorithms__1.tex
@@ -1,5 +1,5 @@
 
-\subsection{Supervised Algorithms}
+\subsection{Random Forests}
 
 Classification algorithms for this first iteration are based on the most common techniques found in the literature for this task. Random forests, Gradient Boosting and Logistic Regression are standard for this kind of jobs. For the purpose of fast benchmarking Multinomial Naive Bayes is also tested since it is a very fast non-parametric method. 
 
