--- a/section_Mackay_Information_Compression_and__.tex
+++ b/section_Mackay_Information_Compression_and__.tex
@@ -5,8 +5,8 @@ Probabilities can be used to describe degrees of beliefs of outcomes.
 
 Cox axioms of consistency map beliefs to probability spaces if they satisfy the following axioms:
 
-Degrees of belief are transitive i.e. if B(x) is greater than B(y) and B(y) is greater than B(z) then B(x) gt B(z). \\
-The degree of belief of x and its negation x are related i.e. there exists a function f such that B(x) = f(B(x)) \\
+Degrees of belief are transitive i.e. $if B(x) \geq B(y)$ and $B(y) \geq B(z)$ then $B(x) \geq B(z)$. \\
+The degree of belief of x and its negation x are related i.e. there exists a function f such that $B(x) = f(B(x))$ \\
 The degree of belief of a conjunction x and y is related to the degree of belief of the conditional proposition $x | y$ and $B(y)$ i.e. there exists a function g s.t. $B(x) = g(B(x | y)B(y))$
 
 Where x is a proposition with a true/false outcome, B(x) is the degree of belief on that proposition, the negation of x is x and the degree of belief of prop x given that y is true is B(x | y).
