--- a/section_Mackay_Information_Compression_and__.tex
+++ b/section_Mackay_Information_Compression_and__.tex
@@ -5,7 +5,7 @@ Probabilities can be used to describe degrees of beliefs of outcomes.
 
 Cox axioms of consistency map beliefs to probability spaces if they satisfy the following axioms:
 
-Degrees of belief are transitive i.e. $if B(x) \geq B(y)$ and $B(y) \geq B(z)$ then $B(x) \geq B(z)$. \\
+Degrees of belief are transitive i.e. if $B(x) \geq B(y)$ and $B(y) \geq B(z)$ then $B(x) \geq B(z)$. \\
 The degree of belief of x and its negation \overline{x} are related i.e. there exists a function $f$ such that $B(x) = f(B(x))$ \\
 The degree of belief of a conjunction x and y is related to the degree of belief of the conditional proposition $x | y$ and $B(y)$ i.e. there exists a function $g$ s.t. $B(x) = g(B(x | y)B(y))$
 
