--- a/section_Mackay_Information_Compression_and__.tex
+++ b/section_Mackay_Information_Compression_and__.tex
@@ -31,7 +31,7 @@ Don’t say the likelihood of the data!
 
 \textbf{Subjective priors}: in general, we need to make assumptions about the probability priors of the parameters. The values of these are unknown (or just fixed as some data) and a model needs to be assigned to test the hypothesis. The same goes to the likelihoods, assigning a distribution to the parameters in subjective way will change our likelihood function.
 
-\textbf{Likelihood principle}: The likelihood principle: given a generative model for data d given parameters θ, P (d | θ), and having observed a particular outcome d_1 , all inferences and predictions should depend only on the function P (d_1 | θ) i.e. they depend only on the data at hand, on what actually happened. 
+\textbf{the likelihood principle}: given a generative model for data $d$, given parameters $\theta$, the likelihood is defined as $P (d | \theta)$, and having observed a particular outcome $d_1$ , all inferences and predictions should depend only on the function $P(d_1 | \theta)$ i.e. they depend only on the data at hand, on what actually happened. 
 
 Shannon information content of an outcome: let x be an event/ outcome then h(x) is defined to be h(x) = log _2[1/ P(x)]
 Note that it is measured in bits and that less probable events carry more “information”.
