--- a/textbf_TODO_LO_QUE_ESTA__.tex
+++ b/textbf_TODO_LO_QUE_ESTA__.tex
@@ -7,7 +7,8 @@
 \textbf{Gral}
 \textit{The generalization performance of a learning method relates to its prediction capability on independent test data. Assessment of this performance is extremely important in practice, since it guides the choice of learning method or model, and gives us a measure of the quality of the ultimately chosen model.}
 
-\textit{}
+\textit{Let $k : {1,..,N} &\mapsto {1, .., K}$ be an indexing function are more details be an indexing
+function that indicates the partition to which observation i is allocated by the randomization. Denote by}
 
 \textit{}
 
