--- a/textbf_TODO_LO_QUE_ESTA__.tex
+++ b/textbf_TODO_LO_QUE_ESTA__.tex
@@ -13,7 +13,7 @@ $Error = E[L(Y,\hat{f}(X))] $ i.e. the average the average generalization error 
 
 \textit{Ideally, if we had enough data, we would set aside a validation set and use it to assess the performance of our prediction model. Since data are often scarce, this is usually not possible. To finesse the problem, K-fold cross-validation uses part of the available data to fit the model, and a different part to test it. We split the data into K roughly equal-sized parts; }
 
-\textit{Let $k : {1,..,N} \mapsto {1, .., K}$ be an indexing function are more details be an indexing
+\textit{Let $k : \{1,..,N\} \mapsto \{1, .., K\}$ be an indexing function are more details be an indexing
 function that indicates the partition to which observation i is allocated by the randomization. Denote by}
 
 \textit{}
