--- a/bibliography/biblio.bib
+++ b/bibliography/biblio.bib
@@ -1,21 +1,28 @@
-@article{briceno2009chagas,
-  title = {{Chagas disease in the Americas: an ecohealth perspective}},
-  author = {Brice{\~n}o-Le{\'o}n, Roberto},
-  journal = {Cadernos de Sa{\'u}de P{\'u}blica},
-  volume = {25},
-  pages = {S71--S82},
-  year = {2009},
-  publisher = {SciELO Brasil},
+@book{elemstatslearn,
+  added-at = {2009-12-09T12:44:18.000+0100},
+  author = {Hastie, T. and Tibshirani, R. and Friedman, J.},
+  interhash = {39bdf0a76d889fa39deb5d1ac793ff4e},
+  intrahash = {0cd6d6683b38e7b5a15ee550266b5b9c},
+  keywords = {ml statistics},
+  publisher = {Springer New York Inc.},
+  series = {Springer Series in Statistics},
+  timestamp = {2008-08-16T16:17:43.000+0200},
+  title = {The Elements of Statistical Learning},
+  year = 2009
 }
 
-
-@article{chunara2013large,
-  title = {{Large-scale Measurements of Network Topology and Disease Spread: A Pilot Evaluation Using Mobile Phone Data in Cote d’Ivoire}},
-  author = {Chunara, R and Nsoesie, EO},
-  journal = {NetMob D4D Challenge},
-  pages = {1--18},
-  year = {2013},
+@article{scikit-learn,
+ title={Scikit-learn: Machine Learning in {P}ython},
+ author={Pedregosa, F. and Varoquaux, G. and Gramfort, A. and Michel, V.
+         and Thirion, B. and Grisel, O. and Blondel, M. and Prettenhofer, P.
+         and Weiss, R. and Dubourg, V. and Vanderplas, J. and Passos, A. and
+         Cournapeau, D. and Brucher, M. and Perrot, M. and Duchesnay, E.},
+ journal={Journal of Machine Learning Research},
+ volume={12},
+ pages={2825--2830},
+ year={2011}
 }
+
 
 
 @article{enns2013human,
@@ -119,6 +126,8 @@
   url = {http://www.who.int/mediacentre/factsheets/fs340/en/},
   urldate = {2016-05-09},
 }
+
+
 
 
 @misc{plan_nacional_chagas,
