--- a/bibliography/biblio.bib
+++ b/bibliography/biblio.bib
@@ -20,7 +20,23 @@
   editor    = { St\'efan van der Walt and Jarrod Millman }
 }
 
-
+@article{graphlab,
+ author = {Low, Yucheng and Bickson, Danny and Gonzalez, Joseph and Guestrin, Carlos and Kyrola, Aapo and Hellerstein, Joseph M.},
+ title = {Distributed GraphLab: A Framework for Machine Learning and Data Mining in the Cloud},
+ journal = {Proc. VLDB Endow.},
+ issue_date = {April 2012},
+ volume = {5},
+ number = {8},
+ month = apr,
+ year = {2012},
+ issn = {2150-8097},
+ pages = {716--727},
+ numpages = {12},
+ url = {http://dx.doi.org/10.14778/2212351.2212354},
+ doi = {10.14778/2212351.2212354},
+ acmid = {2212354},
+ publisher = {VLDB Endowment},
+} 
 
 @article{scikit-learn,
  title={Scikit-learn: Machine Learning in {P}ython},
