--- a/This_analysis_allowed_us_to__.tex
+++ b/This_analysis_allowed_us_to__.tex
@@ -1,1 +1,9 @@
-This analysis allowed us to specifically detect outlying communities in the focused regions. Some of these can be seen directly from the previous heatmaps, where the towns of Avellaneda, San Isidro and Parque Patricios have been pinpointed.
+\section{Classification Scoring Metrics}
+
+First confusion table (TRUE, FALSE vs Positive Negative) with rates and wiki table.
+
+Brief naming:explanation of common metrics.
+
+F1 and F1_weighted.
+
+Roc and Roc_Auc
