--- a/textbf_TODO_LO_QUE_ESTA__.tex
+++ b/textbf_TODO_LO_QUE_ESTA__.tex
@@ -1,6 +1,12 @@
 \textbf{TODO LO QUE ESTA EN ITALICA ES TIPO HIGHLIGHTER}
 
 \section{Supervised vs. Unsupervised and then Classification vs. Regression}
+the most widely used definition on what machine learning is algorithms that can automatically perform or learn a specific task and which need not be directed to do so. 
+
+In virtually all cases, algorithms are set to produce outputs, noted by $Y$, from inputs of data, noted by $X$. In most cases generally pre-processed for the task at hand.
+
+Supervised machine learning refers to the 
+
 
 \subsection{}
 
