--- a/textbf_TODO_LO_QUE_ESTA__.tex
+++ b/textbf_TODO_LO_QUE_ESTA__.tex
@@ -1,15 +1,33 @@
+
+
+\section{Introduction}
+
 \textbf{TODO LO QUE ESTA EN ITALICA ES TIPO HIGHLIGHTER}
 
-\section{Supervised vs. Unsupervised and then Classification vs. Regression}
-the most widely used definition on what machine learning is algorithms that can automatically perform or learn a specific task and which need not be directed to do so. 
+\section{Supervised Classification Learning vs. Unsupervised and then Classification vs. Regression}
 
-In virtually all cases, algorithms are set to produce outputs, noted by $Y$, from inputs of data, noted by $X$. In most cases generally pre-processed for the task at hand.
+The most widely used definition of machine learning is attributed to Tom Mitchell: \textbf{Mitchell, T. (1997). Machine Learning, McGraw Hill. ISBN 0-07-042807-7, p.2.} 
+"A computer program is said to learn from experience E with respect to some class of tasks T and performance measure P if its performance at tasks in T, as measured by P, improves with experience E" . To our purpose it is clear though that this definition is not formally well-defined. However it serves to convey the idea of algorithms that automatically become better over time and with more data. Note that the "goodness" of their performance is inherently subjected to the evaluation criteria chosen for the task. Because of this,\textit{learning} is less associated with a cognitive definition in this context and more to a performance based approach.
+
+Examples of these machine learning programs are now widespread to the point where their use has direct impact on the lives of millions of people. A non-exhausitve list of applicaitons include self-driving cars, spam detection systems, face-voice recognition , AI opponents in games, etc.  
+
+Machine learning is a subfield of Computer Science with broad intersections with statistics and mathematical optimization.
+ It is divided into two main categories: Supervised and Unsupervised. The difference is simple, where in the fist case algorithms  are set to produce outputs, noted by $Y$, from input data, noted by $X$. The standard naming convention  
+
+
+%Their merits have already been put to the test both academically and industrially
+
+The 
+Algorithms that can automatically perform or learn a specific task and which need not be directed to do so. 
+
+
+
+In virtually all cases, 
 
 Supervised machine learning refers to the 
 
 
 \subsection{}
-
 
 \section{Bias, Variance, Generalization and Model Complexity}
 
