--- a/section_Introduction_textbf_TODO_LO__.tex
+++ b/section_Introduction_textbf_TODO_LO__.tex
@@ -4,15 +4,68 @@
 
 \textbf{TODO LO QUE ESTA EN ITALICA ES TIPO HIGHLIGHTER}
 
-\section{Supervised Classification Learning vs. Unsupervised and then Classification vs. Regression}
+\section{ Brief introduction to machine learning and supervised classification problems}
 
-The most widely used definition of machine learning is attributed to Tom Mitchell: \textbf{Mitchell, T. (1997). Machine Learning, McGraw Hill. ISBN 0-07-042807-7, p.2.} 
-"A computer program is said to learn from experience E with respect to some class of tasks T and performance measure P if its performance at tasks in T, as measured by P, improves with experience E" . To our purpose it is clear though that this definition is not formally well-defined. However it serves to convey the idea of algorithms that automatically become better over time and with more data. Note that the "goodness" of their performance is inherently subjected to the evaluation criteria chosen for the task. Because of this,\textit{learning} is less associated with a cognitive definition in this context and more to a performance based approach.
+Machine learning is a subfield of computer science with broad \textit{theoeretical} intersections with statistics and mathematical optimization. At present time it has a wide range of application. A non-exhausitve list of applicaitons include self-driving cars, spam detection systems, face-voice recognition , AI opponents in games, disease prediction in patients, stock pricing, etc. Examples of these machine learning programs are now widespread to the point where their use has direct impact on the lives of millions of people. Due to this, machine learning has \textit{practical} intersections with data and software engineering.
 
-Examples of these machine learning programs are now widespread to the point where their use has direct impact on the lives of millions of people. A non-exhausitve list of applicaitons include self-driving cars, spam detection systems, face-voice recognition , AI opponents in games, etc.  
+The most widely used definition of machine learning is attributed to Tom Mitchell: 	\textbf{Mitchell, T. (1997). Machine Learning, McGraw Hill. ISBN 0-07-042807-7, p.2.} 
+"A computer program is said to learn from experience E with respect to some class of tasks T and performance measure P if its performance at tasks in T, as measured by P, improves with experience E" . To our purpose it is clear though that this definition \footnote{Other authors might reference mahchine learning as \textit{statistical learning}. See CITA A HASTIE TIBSHIRANIE} is not formally well-defined. However it serves to convey the idea of algorithms that automatically \textit{learns} better over time and with more data. Note that the "goodness" of their performance is inherently subjected to the evaluation criteria chosen for the task. Because of this,\textit{learning} is less associated with a cognitive definition in this context and more to a performance based approach.
 
-Machine learning is a subfield of Computer Science with broad intersections with statistics and mathematical optimization.
- It is divided into two main categories: Supervised and Unsupervised. The difference is simple, where in the fist case algorithms  are set to produce outputs, noted by $Y$, from input data, noted by $X$. The standard naming convention  
+
+
+It is divided into two main categories: Supervised and Unsupervised. The difference is that in the fist case algorithms are set to produce outputs, noted by $Y$, from input data, noted by $X$ i.e. the computer has access to examples of outputs and tries to reproduce them based on information contained in $X$. The second type of problems is where the output data is missing altogether from data. In this scenario the most common objectives are clustering samples, density estimation and data compression. Linear regression and K-means clustering are examples of algorithms in each of these categories respectively.
+
+\subsubsection{Notation}
+
+For the purpose of this work we will be talking of the training set, noted by $\mathrm{T}$ as the set of data examples. The objective is to build a probabilistic model which has the capacity to predict correctly the class instance of new data objects based on having seen information of other data objects. An example lets consider Fisher's widely known Iris dataset where samples can belong to any of following Iris flower species: \textit{Iris setosa}, \textit{Iris virginica} and \textit{Iris versicolor}. 
+%\url{http://stackoverflow.com/}
+\footnote{For more information on this set, a historic review is given at \url{https://en.wikipedia.org/wiki/Iris_flower_data_set}}.
+Four measurements were made on all of the observations to account for the length and width of the flower's petals and sepals.
+
+
+An short example of this  dataset can be seen below:
+
+\begin{table}[ht]
+\caption{Head of Iris Dataset}
+\label{tab:results}
+\centering
+\begin{tabular}{ l l l l l }
+\toprule
+Sepal length & Sepal width & Petal length & Petal width & Species \\
+\midrule
+5.1  & 3.5 &  1.4 & 0.2 & \textit{setosa} \\
+5.7  & 2.8 &  4.1 & 1.3 & \textit{versicolor} \\
+6.3  & 3.3 &  6.0 & 2.5 & \textit{virginica} \\
+\bottomrule
+\end{tabular}
+\end{table}
+
+
+
+
+
+we will focus on the supervised aspect of machine learning. This area is then sub-categorized according to the type of information encoded in the data. When outputs $Y$ are encoding samples into classes then it is said that it is a supervised classification problem. On the other hand, when the output takes continuous (or $\mathbb{R}$ dense) range of values the problem is said to be of supervised regression.
+
+For supervised classification algorithms, a brief notation outline is described below, following a standard logistic regression classifier example:
+
+
+The objective is
+
+
+
+
+
+It is important to start noting at this point certain subtleties in the naming convention used for machine learning. Most terms have equivalent notations in other areas of knowledge, even in closely related ones like statistics. A typical machine learning problem starts with an object of study, for example flowers, and data collected from these objects. In the flower scenario 
+
+Other subtleties worth noting is the 
+
+\textit{any reasonable machine learning method can be formulated as a formal probabilistic model, so in this sense machine learning is very much the same as statistics, but it differs in that it generally doesn't care about parameter estimates (just prediction) and it focuses on computational efficiency and large datasets.}
+
+(CITAR BREIMAN TWO cultures IN STATISTICal modelling)
+
+typically shown as 
+
+
 
 
 %Their merits have already been put to the test both academically and industrially
